# Bindery

./: .gitignore  CLAUDE.md  README.md  patchnotes.md  pyproject.toml  roadmap.md  run_tests.sh  spec.md
.github/workflows/: ci.yml
scripts/: find_missing_images.py
src/bindery/: __init__.py  cli.py  epub.py  library.py  pagination.py  reserialize.py  transforms.py  validate.py
tests/: test_cli.py  test_epub.py  test_library.py  test_pagination.py  test_reserialize.py  test_transforms.py
