[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bindery"
version = "0.3.0"
description = "Repair EPUBs (well-formedness fixes), epubcheck-gated, with in-place Calibre library replacement"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
  { name = "vrnvctss" },
]
# Core is stdlib-only. html5lib is needed only for the opt-in --reserialize structural
# repair; it is imported lazily, so every other mode works without it installed.
dependencies = ["html5lib>=1.1"]

[project.scripts]
bindery = "bindery.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bindery"]
